# blog_fastapi

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: d43bf3f19644_create_user_and_blog_table_migrations.py  f6c38ddfd4de_first_commit.py
src/: main.py  session.py  settings.ini  settings.py
src/apis/: base.py
src/apis/v1/: route_blog.py  route_user.py
src/db/: base.py
src/db/models/: blog.py  user.py
src/db/repository/: blog.py  user.py
src/schemas/: blog.py
