[tool.poetry]
name = "blog-fastapi"
version = "0.1.0"
description = ""
authors = ["fersus <deriabin_85@mail.ru>"]
readme = "README.md"
packages = [{include = "blog_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.101.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
