[tool.poetry]
name = "blog-fastapi"
version = "0.1.0"
description = ""
authors = ["fersus <deriabin_85@mail.ru>"]
readme = "README.md"
packages = [{include = "blog_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.101.0"}
sqlalchemy = "^2.0.19"
alembic = "^1.11.2"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"
toml = "^0.10.2"
pydantic = {extras = ["email"], version = "^2.1.1"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
